Fixed text overlapping with footer in attraction show page

--- a/frontend/src/styles/components/attraction_index.scss
+++ b/frontend/src/styles/components/attraction_index.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-shrink: 0;
+
 }
 
 
@@ -96,7 +96,7 @@
 
 
 .attractions-container {
-  min-height: 100vh; 
+  height: 100vh;
   background-color: $BlueGrey;
 
   .searchBar {
@@ -113,8 +113,6 @@
   flex-direction: column;
   justify-content: space-between;
 }
-
-
 
 
 .AddAttraction {
