--- a/frontend/src/styles/components/attraction_show_page.scss
+++ b/frontend/src/styles/components/attraction_show_page.scss
@@ -13,7 +13,7 @@
 .attraction-show-container {
   width: 300px;
   padding-bottom: 10px;
-  position: fixed;
+
   left: 50px;
   top: 100px;
 
@@ -39,9 +39,6 @@
 }
 
 .show-page-img {
-  // position: fixed;
-  // left: 3vw;
-  // top: 12.7vh;
   width: 43vw;
   height: 60vh;
   border-radius: 10px;
